--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleTemp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Tempdesktop"></activity>
+        <activity android:name=".tempdesktop2"></activity>
+        <activity android:name=".Tempdesktop" />
         <activity android:name=".Registrarse" />
         <activity android:name=".Msc" />
         <activity android:name=".Ming" />
