--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleTemp"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".segundaPRamaJFcommit"></activity>
+        <activity android:name=".CargarPrueba"></activity>
+        <activity android:name=".segundaPRamaJFcommit" />
         <activity android:name=".PRamaJFCommit" />
-
-        <activity android:name=".PruebaRamaMainCommit"></activity>
+        <activity android:name=".PruebaRamaMainCommit" />
         <activity android:name=".CreateAsk" />
         <activity android:name=".CRUDAsk" />
-
         <activity android:name=".Registrarse" />
         <activity android:name=".Msc" />
         <activity android:name=".Ming" />
@@ -37,16 +35,13 @@
         <activity android:name=".VerPrueba" />
         <activity android:name=".EliminarPrueba" />
         <activity android:name=".ActualizarPrueba" />
-        <activity android:name=".CrearPrueba" >
-        </activity>>
-        <activity android:name=".CRUDPrueba" >
-
+        <activity android:name=".CrearPrueba"></activity>
+        <activity android:name=".CRUDPrueba">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".ModificarPassword" />
         <activity android:name=".Nickname" />
@@ -58,9 +53,7 @@
         <activity android:name=".SesionAdministrador" />
         <activity android:name=".SesionEstudiante" />
         <activity android:name=".Sesion2" />
-        <activity android:name=".MainActivity2">
-
-        </activity>
+        <activity android:name=".MainActivity2"></activity>
         <activity android:name=".RG" />
         <activity android:name=".BigG" />
         <activity android:name=".Registrar" />
