--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".Preguntas"></activity>
         <activity android:name=".CargarPrueba">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".segundaPRamaJFcommit" />
         <activity android:name=".PRamaJFCommit" />
@@ -54,7 +56,11 @@
         <activity android:name=".SesionAdministrador" />
         <activity android:name=".SesionEstudiante" />
         <activity android:name=".Sesion2" />
-        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".MainActivity2">
+
+
+
+        </activity>
         <activity android:name=".RG" />
         <activity android:name=".BigG" />
         <activity android:name=".Registrar" />
